Add param exercise lookup by id
