# docs/swagger.yaml
@@ -92,4 +92,35 @@ paths:
       summary: Create param exercise
       tags:
       - param_exercises
+  /v1/param_exercises/{id}:
+    get:
+      description: Retrieves a param exercise by ID
+      parameters:
+      - description: Param exercise ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.paramExerciseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/presenter.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/presenter.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/presenter.APIError'
+      summary: Get param exercise by ID
+      tags:
+      - param_exercises
 swagger: "2.0"
